add history table

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,11 @@
     <title>Hello</title>
 </head>
 <body>
+
+<br>
+<a href="/api/device">Device</a><br>
+<a href="/api/customer">Customer</a><br>
+<a href="/api/history">History</a>
     Hello {{ name }}
     <form action="" method="POST">
         {% csrf_token %}
